cmake_minimum_required(VERSION 3.22)
project(Mario_bros)

set(CMAKE_CXX_STANDARD 14)

include_directories(src/include)

add_executable(Mario_bros
        .idea/.gitignore
        .idea/Mario-bros.iml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        src/bin/sdl2-config
        src/bin/SDL2.dll
        src/include/begin_code.h
        src/include/close_code.h
        src/include/SDL.h
        src/include/SDL_assert.h
        src/include/SDL_atomic.h
        src/include/SDL_audio.h
        src/include/SDL_bits.h
        src/include/SDL_blendmode.h
        src/include/SDL_clipboard.h
        src/include/SDL_config.h
        src/include/SDL_cpuinfo.h
        src/include/SDL_egl.h
        src/include/SDL_endian.h
        src/include/SDL_error.h
        src/include/SDL_events.h
        src/include/SDL_filesystem.h
        src/include/SDL_gamecontroller.h
        src/include/SDL_gesture.h
        src/include/SDL_haptic.h
        src/include/SDL_hidapi.h
        src/include/SDL_hints.h
        src/include/SDL_joystick.h
        src/include/SDL_keyboard.h
        src/include/SDL_keycode.h
        src/include/SDL_loadso.h
        src/include/SDL_locale.h
        src/include/SDL_log.h
        src/include/SDL_main.h
        src/include/SDL_messagebox.h
        src/include/SDL_metal.h
        src/include/SDL_misc.h
        src/include/SDL_mouse.h
        src/include/SDL_mutex.h
        src/include/SDL_name.h
        src/include/SDL_opengl.h
        src/include/SDL_opengl_glext.h
        src/include/SDL_opengles.h
        src/include/SDL_opengles2.h
        src/include/SDL_opengles2_gl2.h
        src/include/SDL_opengles2_gl2ext.h
        src/include/SDL_opengles2_gl2platform.h
        src/include/SDL_opengles2_khrplatform.h
        src/include/SDL_pixels.h
        src/include/SDL_platform.h
        src/include/SDL_power.h
        src/include/SDL_quit.h
        src/include/SDL_rect.h
        src/include/SDL_render.h
        src/include/SDL_revision.h
        src/include/SDL_rwops.h
        src/include/SDL_scancode.h
        src/include/SDL_sensor.h
        src/include/SDL_shape.h
        src/include/SDL_stdinc.h
        src/include/SDL_surface.h
        src/include/SDL_system.h
        src/include/SDL_syswm.h
        src/include/SDL_test.h
        src/include/SDL_test_assert.h
        src/include/SDL_test_common.h
        src/include/SDL_test_compare.h
        src/include/SDL_test_crc32.h
        src/include/SDL_test_font.h
        src/include/SDL_test_fuzzer.h
        src/include/SDL_test_harness.h
        src/include/SDL_test_images.h
        src/include/SDL_test_log.h
        src/include/SDL_test_md5.h
        src/include/SDL_test_memory.h
        src/include/SDL_test_random.h
        src/include/SDL_thread.h
        src/include/SDL_timer.h
        src/include/SDL_touch.h
        src/include/SDL_types.h
        src/include/SDL_version.h
        src/include/SDL_video.h
        src/include/SDL_vulkan.h
        src/lib/cmake/SDL2/sdl2-config-version.cmake
        src/lib/cmake/SDL2/sdl2-config.cmake
        src/lib/pkgconfig/sdl2.pc
        src/lib/libSDL2.a
        src/lib/libSDL2.dll.a
        src/lib/libSDL2.la
        src/lib/libSDL2_test.a
        src/lib/libSDL2_test.la
        src/lib/libSDL2main.a
        src/lib/libSDL2main.la
        src/display.c
        src/main.c
        src/SDL2-devel-2.0.22-mingw.tar.gz
        README.md)
